--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "lint": "eslint '**/*.js'",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "build:flow":
-      "cp flow-template dist/index.cjs.js.flow && cp flow-template dist/index.esm.js.flow",
+    "build:flow": "copyfiles flow-template dist/index.cjs.js.flow && copyfiles flow-template dist/index.esm.js.flow",
     "build:source": "rollup -c",
     "build": "del dist && mkdir dist && yarn build:flow && yarn build:source",
     "start": "rollup -c -w",
@@ -77,6 +76,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-annotate-pure-calls": "^0.3.0",
+    "copyfiles": "^2.2.0",
     "cross-env": "^5.1.4",
     "del-cli": "^1.1.0",
     "eslint": "^4.19.1",
